--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,13 @@
     { "src": "public/**", "use": "@vercel/static" }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    {
+      "src": "/(.*\\.(?:js|css|png|jpg|jpeg|svg|ico|mp3|webp|json))$",
+      "dest": "/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
   ]
 }
